--- a/beranda.css
+++ b/beranda.css
@@ -711,7 +711,7 @@ path:hover {
         /* Agar teks di tengah */
     }
     .banyuwangi-map svg {
-        max-width: 480px;
+        width: 480px;
         left: 100px;
     }
     
@@ -795,19 +795,19 @@ path:hover {
         gap: 460px;
     }
     .banyuwangi-map svg {
-        max-width: 480px;
+        width: 480px;
         left: 100px;
     }
     .info-card {
         position: absolute;
         align-self: center;
-        top: 4800px;
+        top: 90%;
         left: 0;
         right: 0;
         margin: 0 10px;
         /* Margin di kiri dan kanan untuk memberi ruang */
         max-width: 100%;
-        height: 7%;
+        height: 12%;
         padding: 15px;
     }
 
@@ -826,7 +826,7 @@ path:hover {
     .container-beranda {
         position: relative;
         width: 100vw;
-        height: 50vh;
+        height: 59vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -867,12 +867,12 @@ path:hover {
     .info-card {
         position: absolute;
         align-self: center;
-        top: 4000px;
+        top: 90%;
         left: 0;
         right: 0;
         /* Margin di kiri dan kanan untuk memberi ruang */
-        max-width: 100%;
-        height: 8%;
+        width: 100%;
+        height: 14%;
         padding: 15px;
     }
 
@@ -883,7 +883,7 @@ path:hover {
     }
 
     .banyuwangi-map svg {
-        max-width: 400px;
+        width: 400px;
         left: 40px;
     }
 }
@@ -892,17 +892,17 @@ path:hover {
 .info-card {
     position: absolute;
     align-self: center;
-    top: 3900px;
+    top: 90%;
     left: 0;
     right: 0;
     margin: 0 10px;
     /* Margin di kiri dan kanan untuk memberi ruang */
     max-width: 100%;
-    min-height: 8%;
+    min-height: 16%;
     padding: 15px;
 }
 .banyuwangi-map svg {
-    max-width: 300px;
+    width: 400px;
     left: 30px;
 }
 }
