--- a/beranda.css
+++ b/beranda.css
@@ -798,7 +798,7 @@ path:hover {
     .info-card {
         position: absolute;
         top: 90%;
-        left: 0;
+        left: -10px;
         right: 0;
         margin: 0 10px;
         /* Margin di kiri dan kanan untuk memberi ruang */
@@ -864,7 +864,7 @@ path:hover {
         position: absolute;
         align-self: center;
         top: 85%;
-        left: 0;
+        left: -10px;
         right: 0;
         /* Margin di kiri dan kanan untuk memberi ruang */
         width: 90%;
@@ -889,7 +889,7 @@ path:hover {
     position: absolute;
     align-self: center;
     top: 80%;
-    left: 0;    
+    left: -10px;    
     right: 0;
     margin: 0 10px;
     /* Margin di kiri dan kanan untuk memberi ruang */
